--- a/styles/ElectricityEstimate.module.css
+++ b/styles/ElectricityEstimate.module.css
@@ -7,7 +7,7 @@
     margin-top: 13rem;
 }
 
-.container {
+.innerContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -79,6 +79,7 @@
     width: 100%;
     max-width: 200px;
     border-radius: 10px;
+    border: 1px solid;
 }
 
 .btnContainer {
