--- a/styles/FlightEstimate.module.css
+++ b/styles/FlightEstimate.module.css
@@ -7,7 +7,7 @@
     margin-top: 11rem;
 }
 
-.container {
+.innerContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -81,6 +81,7 @@
     width: 100%;
     max-width: 200px;
     border-radius: 10px;
+    border: 1px solid;
 }
 
 .btnContainer {
