added links for research papers and resources

--- a/styles/Emission.module.css
+++ b/styles/Emission.module.css
@@ -45,6 +45,10 @@
     color: #333;
 }
 
+.resourcesList li {
+    margin-bottom: 1rem;
+}
+
 .resourcesList a {
     color: #000;
     text-decoration: none;
